--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 1. implement base currency into config file and retrieve base currency to concatenate into api endpoint
 2. get a functioning index.php
+3. make it so if either xml file exists it will create them 
